Added shared header

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,6 +1,6 @@
 # Only the next 3 lines need to be edited - leave the rest!
 TARGET = client 
-DEPS = rdwrn.h
+DEPS = rdwrn.h ../shared.h
 OBJ = rdwrn.o client.o
 
 CC=cc
